//bugs.freedesktop.org/show_bug.cgi?id=1651) attachment #1484     (https://bugs.freedesktop.org/attachment.cgi?id=1484): - set default XkbModel to pc105 (like legacy keyboard driver did) - fix autorepeat Patch by Matthieu Herrb and Petter Urkedal